# api-popp

./: .githubignore  .gitignore  CHANGELOG.md  README.md  ReleaseNotes.md  Synchronisation.md  gitHubPublish.jenkinsfile  gitHubPull.jenkinsfile  release.jenkinsfile
samples/popp-token-python/: Dockerfile  Makefile  README.adoc  docker-compose.yaml  model.py  popp_token.py  pyproject.toml  requirements.txt  server.py
samples/popp-token-python/popp/: token.py
scenario/: ScenarioMessage_Example.json  Specification.md
src/asyncapi/: I_PoPP_TokenGeneration.yaml  I_PoPP_Token_Generation.yaml
src/openapi/: I_POPP_Generate_Token_EHC.yaml  I_PoPP_Authorization_Server.yaml  I_PoPP_CheckIn.yaml  I_PoPP_CheckIn_AuthorizationServer.yaml  I_PoPP_CheckIn_EHC.yaml  I_PoPP_CheckIn_HEALTHID.yaml  I_PoPP_CheckIn_HID.yaml  I_PoPP_CheckIn_ResourceServer.yaml  I_PoPP_CheckIn_RessourceServer.yaml  I_PoPP_CheckIn_eGK_Verification.yaml  I_PoPP_Communication_EHC.yaml  I_PoPP_EHC_CertHash_Import.json  I_PoPP_Load_Practitioner_Information.yaml  I_PoPP_Read_Status_PoPP.yaml  I_PoPP_Token_Generation.yaml  I_PoPP_Token_Generation_EHC.yaml  I_PoPP_Token_Generation_online_check_in.yaml  PoPP_Token_Schema.yaml  _test.json  test.yaml
src/plantuml/: AD_PoPP_Authentisierung_eGK.puml  AD_PoPP_Authentisierung_gID.puml  AD_PoPP_Einloesen_OTP_Drittanbieter.puml  AD_PoPP_Einloesen_OTP_in_LEI.puml  AF_Einloesen_OTP_Videosprechstunde.puml  AF_Einloesen_OTP_in_LEI.puml  AF_PoPP_Anwendungsfaelle.puml  AF_PoPP_Anwendungsfaelle_LEI_Registrieren.puml  KD_Infomodell_TANset.puml  KD_PoPP_Cardlink.puml  (+6 more)
