[tool.poetry]
name = "popp-token-python"
version = "0.1.0"
description = "Sample implementation of POPP-Token in Python"
authors = ["Sergej Suskov <sergej.suskov@gematik.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jwcrypto = "^1.5.6"
icecream = "^2.1.3"
pydantic = "^2.8.2"
fastapi = "^0.115"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
